logs/5360845.err
  File "/panfs/roc/groups/7/cough052/barna314/nmma_fitter/make_jobs.py", line 31
    except:
         ^
SyntaxError: invalid syntax
